examples/type_system/failing/183_hash_missing_colon.flx
let h = { "a" 1 }
let after = 1
